Fix PyLucene sidecar packaging and update cuVS version